<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/discover" />
    <item
        android:id="@+id/nav_post"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/post" />
    <item
        android:id="@+id/nav_connections"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/network" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>